--- a/kitty-config/pom.xml
+++ b/kitty-config/pom.xml
@@ -43,7 +43,12 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-starter-bus-amqp</artifactId>
 	    </dependency>
-	</dependencies>
+		<!--zookeeper依赖-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
+		</dependency>
+</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
