--- a/kitty-config/src/main/resources/application.yml
+++ b/kitty-config/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
       label: master  # git仓库分支
       server:
         git:
-          uri: https://gitee.com/liuge1988/kitty.git  # 配置git仓库的地址
+          uri: https://github.com/Jerry201701/springcloud-demo.git  # 配置git仓库的地址
           search-paths: config-repo  # git仓库地址下的相对地址，可以配置多个，用,分割。
 #          username: username  # git仓库的账号
 #          password: password  # git仓库的密码
