修改注册中心为zookeeper

--- a/kitty-backup/pom.xml
+++ b/kitty-backup/pom.xml
@@ -61,6 +61,11 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-starter-consul-discovery</artifactId>
 	    </dependency>
+		<!--zookeeper依赖-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<!--srping cloud-->
