--- a/kitty-monitor/pom.xml
+++ b/kitty-monitor/pom.xml
@@ -50,7 +50,12 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-starter-consul-discovery</artifactId>
 	    </dependency>
-	</dependencies>
+		<!--zookeeper依赖-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
+		</dependency>
+</dependencies>
 	
 	<!--srping cloud-->
 	<dependencyManagement>
