--- a/kitty-hystrix/pom.xml
+++ b/kitty-hystrix/pom.xml
@@ -55,6 +55,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
 		</dependency>
+		<!--zookeeper依赖-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zookeeper-discovery</artifactId>
+		</dependency>
 		<!--turbine-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
