--- a/kitty-hystrix/src/main/resources/application.yml
+++ b/kitty-hystrix/src/main/resources/application.yml
@@ -2,13 +2,13 @@ server:
   port: 8501
 spring:
   application:
-    name: kitty-hystrix
+    name: hystrix-service
   cloud:
-    consul:
-      host: localhost
-      port: 8500
+    zookeeper:
       discovery:
-        serviceName: ${spring.application.name}	# 注册到consul的服务名称
+        enabled: true
+        root: /hystrix
+
 turbine:
   instanceUrlSuffix: hystrix.stream    # 指定收集路径
   appConfig: kitty-consumer    # 指定了需要收集监控信息的服务名，多个以“,”进行区分
